--- a/templates/home.html
+++ b/templates/home.html
@@ -205,7 +205,7 @@
         </header>
 
         <section id="noticias">
-            <h5 class="mb-4 fw-bold"><i class="bi bi-lightning-fill text-warning me-2"></i>Últimas Atualizações</h5>
+            <h5 class="mb-4 fw-bold"><i class="bi bi-lightning-fill text-warning me-2"></i>Últimas Notícias</h5>
 
             {% if noticias %}
                 <div class="row">
